# automate_content_creation

./: plan.txt  pyproject.toml
tests/: app.py  main.ipynb
