[tool.poetry]
name = "automate-content-planning"
version = "0.1.0"
description = ""
authors = ["DarrenHuangTW <darrenhhuang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firecrawl-py = "^1.6.8"
aisuite = {extras = ["all"], version = "^0.1.6"}
requests = "^2.32.3"
pandas = "^2.2.3"
serpapi = "^0.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
